--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -15,4 +15,5 @@ $y_primay: #d88e00;
 $y_second: #edcb7e;
 $y_third:#9e7c3a;
 $y-fourth: #d2c6ad;
+$y-footer: #ffe59e;
 $opacity-menu: rgba(0, 0, 0, 0.2);
