--- a/app/styles/_encontreSeuImovel.scss
+++ b/app/styles/_encontreSeuImovel.scss
@@ -11,17 +11,25 @@
   }
 
   .flip-container {
-    display: inline-block;
     max-width: 777px;
     width: 100%;
-    height: 511px;
     perspective: 1000px;
+
+    // @media screen and (max-width: 990px) {
+    //   height: 455px;
+    //   background: chartreuse;
+    // }
+
+    // @media screen and (max-width: 768px) {
+    //   height: 340px;
+    //   background: aqua;
+    // }
 
     .flipper {
       position: relative;
-      max-width: 100%;
-      width: 100%;
-      max-height: 100%;
+      // max-width: 100%;
+      // width: 100%;
+      // max-height: 100%;
       height: 100%;
       transition: transform 0.8s;
       transform-style: preserve-3d;
@@ -34,8 +42,6 @@
     .front,
     .back {
       position: absolute;
-      width: 100%;
-      height: 100%;
       backface-visibility: hidden;
     }
 
