--- a/app/styles/_diaDeFortunas.scss
+++ b/app/styles/_diaDeFortunas.scss
@@ -51,7 +51,7 @@
     line-height: 1.62;
     letter-spacing: 0.52px;
 
-    @media screen and (max-witdh: 1000px) {
+    @media screen and (max-width: 975px) {
       flex-direction: column;
     }
 
