--- a/app/styles/_lojasDeAtendimento.scss
+++ b/app/styles/_lojasDeAtendimento.scss
@@ -1,4 +1,5 @@
 .lojasDeAtendimento {
+  margin-top: 144px;
   position: relative;
 
   h3 {
@@ -116,6 +117,7 @@
     }
 
     .close {
+      padding: 10px;
       margin-left: auto;
       color: $y-second;
       font-family: $flama-light;
@@ -179,7 +181,7 @@
           justify-content: flex-start;
           flex: 1 1 200px;
 
-          input[type='checkbox'] {
+          input[type='checkbox'], input[type='radio']  {
             display: none;
           }
 
@@ -207,12 +209,12 @@
             }
           }
 
-          & input[type='checkbox']:checked~label {
+          & input[type='checkbox']:checked~label, input[type='radio']:checked~label {
             &::after {
               content: 'x';
               position: absolute;
-              top: 4px;
-              left: -26px;
+              top: 2px;
+              left: -25px;
             }
           }
         }
@@ -231,7 +233,7 @@
             }
           }
 
-          & input[type='checkbox']:checked~label {
+          & input[type='checkbox']:checked~label, input[type='radio']:checked~label {
             &::after {
               top: -5px;
             }
