--- a/app/styles/_menu.scss
+++ b/app/styles/_menu.scss
@@ -41,8 +41,8 @@
           width: 100%;
           height: 8px;
           margin-top: 10px;
-          background: url('../images/menu/barra-topo.png') no-repeat center center;
-          background-size: cover;
+          background: url('../images/menu/barra-top.png') no-repeat center center;
+          background-size: contain;
         }
       }
     }
@@ -86,7 +86,7 @@
   }
 
   a {
-    @include font(18px, $carentro, $y_primay);
+    @include font(18px, $carentro, $y_primay, center);
     line-height: 1;
     letter-spacing: 0.42px;
 
@@ -99,8 +99,8 @@
       height: 8px;
       margin-top: 5px;
       margin-bottom: 5px;
-      background: url('../images/menu/barra-topo.png') no-repeat center center;
-      background-size: cover;
+      background: url('../images/menu/barra-top.png') no-repeat center center;
+      background-size: contain;
     }
   }
 }
