--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,2 +1,2 @@
-@import './fonts', './variables', './global', './variables', './mixin', './menu', './diaDeFortunas', './decimoTerceiro', '_encontreSeuImovel', '_lojasDeAtendimento', './footer', './menuFIxo', './facilidadesDeCompra', './tourVirtual';
+@import './fonts', './variables', './global', './variables', './mixin', './menu', './diaDeFortunas','./bg02', './decimoTerceiro', '_encontreSeuImovel', '_lojasDeAtendimento', './footer', './menuFIxo', './facilidadesDeCompra', './tourVirtual';
 
