--- a/app/styles/_diaDeFortunas.scss
+++ b/app/styles/_diaDeFortunas.scss
@@ -1,4 +1,5 @@
 .dia-de-fortunas {
+  padding-bottom: 55px;
   .carousel-indicators {
     bottom: -22px;
   }
@@ -69,7 +70,7 @@
       align-items: center;
       max-width: 280px;
       width: 100%;
-      height: 250px;
+      height: 281px;
     }
 
     .sliderText {
