--- a/app/styles/_encontreSeuImovel.scss
+++ b/app/styles/_encontreSeuImovel.scss
@@ -3,13 +3,14 @@
   background-size: cover;
 
 }
+
 .encontreSeuImovel {
   padding-top: 24px;
   display: flex;
   justify-content: start;
   flex-direction: column;
   align-items: center;
-  
+
   h3 {
     @include font(36px, $circusia, $y_second, center);
     letter-spacing: 0.72px;
@@ -21,18 +22,17 @@
     max-width: 777px;
     width: 100%;
     perspective: 1000px;
+    cursor: pointer;
 
     .flipper {
       position: relative;
-      // max-width: 100%;
-      // width: 100%;
-      // max-height: 100%;
       height: 100%;
       transition: transform 0.8s;
       transform-style: preserve-3d;
     }
 
-    &:hover .flipper {
+    &:hover .flipper,
+    &.active .flipper {
       transform: rotateX(180deg);
     }
 
@@ -44,6 +44,35 @@
 
     .back {
       transform: rotateX(180deg);
+    }
+
+    .flip-slider {
+      .carousel-indicators li {
+        display: block;
+        width: 7px;
+        height: 7px;
+        border: 2px solid $y_second;
+        border-radius: 50%;
+        opacity: 1;
+
+        &.active {
+          background: $y_second;
+        }
+      }
+
+      .carousel-control-prev-icon {
+        background: url('../images/diaDeFortunas/left.png') no-repeat center center;
+        background-size: cover;
+        width: 24px;
+        height: 33px;
+      }
+
+      .carousel-control-next-icon {
+        background: url('../images/diaDeFortunas/right.png') no-repeat center center;
+        background-size: cover;
+        width: 24px;
+        height: 33px;
+      }
     }
   }
 
